--- a/css/index.css
+++ b/css/index.css
@@ -2,5 +2,19 @@
 
 #map { height: 180px; }
 
+/* Thème clair (par défaut) */
+body {
+    background-color: white;
+    color: black;
+}
+
+/* Thème sombre */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+        color: white;
+    }
+}
+
 
 
